new multi wishlist structure improved reading of journal files Colonia Engineer information update move javafx cache folder