@@ -7,6 +7,7 @@ import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.DoubleBinding;
 import javafx.beans.property.SimpleStringProperty;
+import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.scene.control.*;
 import javafx.scene.input.Clipboard;
@@ -14,14 +15,9 @@ import javafx.scene.input.ClipboardContent;
 import javafx.scene.layout.*;
 import javafx.util.Callback;
 import lombok.extern.slf4j.Slf4j;
-import nl.jixxed.eliteodysseymaterials.builder.BoxBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.ButtonBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.FlowPaneBuilder;
-import nl.jixxed.eliteodysseymaterials.builder.LabelBuilder;
-import nl.jixxed.eliteodysseymaterials.domain.ApplicationState;
-import nl.jixxed.eliteodysseymaterials.domain.ModuleRecipe;
-import nl.jixxed.eliteodysseymaterials.domain.PathItem;
-import nl.jixxed.eliteodysseymaterials.domain.WishlistRecipe;
+import nl.jixxed.eliteodysseymaterials.builder.*;
+import nl.jixxed.eliteodysseymaterials.constants.PreferenceConstants;
+import nl.jixxed.eliteodysseymaterials.domain.*;
 import nl.jixxed.eliteodysseymaterials.enums.*;
 import nl.jixxed.eliteodysseymaterials.export.TextExporter;
 import nl.jixxed.eliteodysseymaterials.helper.WishlistHelper;
@@ -46,10 +42,11 @@ public class WishlistTab extends EDOTab {
     private static final String WISHLIST_HEADER_CLASS = "wishlist-header";
     private static final String WISHLIST_CATEGORY_CLASS = "wishlist-category";
     private int wishlistSize;
-    private List<WishlistBlueprint> wishlistBlueprints;
+    private final List<WishlistBlueprint> wishlistBlueprints = new ArrayList<>();
     private final AtomicBoolean hideCompleted = new AtomicBoolean();
     private final Map<Material, Integer> wishlistNeededMaterials = new HashMap<>();
 
+    private ComboBox<Wishlist> wishlistSelect;
     private Label noBlueprint;
     private HBox engineerBlueprintsLine;
     private HBox suitUpgradeBlueprintsLine;
@@ -66,10 +63,11 @@ public class WishlistTab extends EDOTab {
     private FlowPane dataFlow;
     private FlowPane assetCircuitFlow;
     private FlowPane assetTechFlow;
-    private TableView<PathItem> tableView;
+    private TableView<PathItem> shortestRoute;
     private VBox blueprints;
     private ScrollPane scrollPane;
     private VBox content;
+    private VBox contentChild;
     private VBox flows;
     private CheckBox hideCompletedCheckBox;
     private Label selectedBlueprintsLabel;
@@ -80,10 +78,18 @@ public class WishlistTab extends EDOTab {
     private Label suitModuleRecipesLabel;
     private Label weaponUpgradeRecipesLabel;
     private Label weaponModuleRecipesLabel;
+    private String activeWishlistUUID;
+    private TextField wishlistName;
 
     static {
         NUMBER_FORMAT.setMaximumFractionDigits(2);
     }
+
+    private Button createWishlistButton;
+    private Button renameWishlistButton;
+    private Button removeWishlistButton;
+    private Button exportButton;
+    private Button clipboardButton;
 
     WishlistTab() {
         initComponents();
@@ -95,10 +101,24 @@ public class WishlistTab extends EDOTab {
         final Clipboard clipboard = Clipboard.getSystemClipboard();
         final ClipboardContent clipboardContent = new ClipboardContent();
         final List<WishlistRecipe> wishlistRecipes = APPLICATION_STATE.getPreferredCommander()
-                .map(commander -> APPLICATION_STATE.getWishlist(commander.getFid()))
+                .map(commander -> APPLICATION_STATE.getWishlists(commander.getFid()).getSelectedWishlist().getItems())
                 .orElse(new ArrayList<>());
         clipboardContent.putString(Base64.getEncoder().encodeToString(WishlistHelper.convertWishlist(wishlistRecipes).getBytes(StandardCharsets.UTF_8)));
         clipboard.setContent(clipboardContent);
+    }
+
+    private static final String FX_FONT_SIZE_DPX = "-fx-font-size: %dpx";
+
+    private void applyFontSizingHack(final Integer fontSize) {
+        //hack for component resizing on other fontsizes
+        final String fontStyle = String.format(FX_FONT_SIZE_DPX, fontSize);
+        this.wishlistName.styleProperty().set(fontStyle);
+        this.createWishlistButton.styleProperty().set(fontStyle);
+        this.renameWishlistButton.styleProperty().set(fontStyle);
+        this.removeWishlistButton.styleProperty().set(fontStyle);
+        this.exportButton.styleProperty().set(fontStyle);
+        this.clipboardButton.styleProperty().set(fontStyle);
+        this.wishlistSelect.styleProperty().set(fontStyle);
     }
 
     private void initComponents() {
@@ -106,7 +126,22 @@ public class WishlistTab extends EDOTab {
         setupScrollPane(this.scrollPane);
         initLabels();
         initShortestPathTable();
-
+        final Set<Wishlist> items = APPLICATION_STATE.getPreferredCommander()
+                .map(commander -> APPLICATION_STATE.getWishlists(commander.getFid()).getAllWishlists())
+                .orElse(Collections.emptySet());
+        this.wishlistSelect = ComboBoxBuilder.builder(Wishlist.class)
+                .withStyleClass("wishlist-select")
+                .withItemsProperty(FXCollections.observableArrayList(items))
+                .withValueChangeListener((observable, oldValue, newValue) -> {
+                    if (newValue != null) {
+                        APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                            this.activeWishlistUUID = newValue.getUuid();
+                            APPLICATION_STATE.selectWishlist(this.activeWishlistUUID, commander.getFid());
+                            EventService.publish(new WishlistSelectedEvent(this.activeWishlistUUID));
+                        });
+                    }
+                })
+                .build();
         this.engineerRecipes = FlowPaneBuilder.builder().withStyleClass("wishlist-recipes").build();
         this.suitUpgradeRecipes = FlowPaneBuilder.builder().withStyleClass("wishlist-recipes").build();
         this.suitModuleRecipes = FlowPaneBuilder.builder().withStyleClass("wishlist-recipes").build();
@@ -120,10 +155,63 @@ public class WishlistTab extends EDOTab {
 
         this.hideCompleted.set(PreferencesService.getPreference("blueprint.hide.completed", Boolean.FALSE));
 
-        final Button exportButton = ButtonBuilder.builder().withStyleClass("wishlist-button").withText(LocaleService.getStringBinding("tab.wishlist.export"))
+        this.removeWishlistButton = ButtonBuilder.builder()
+                .withStyleClass("wishlist-button")
+                .withText(LocaleService.getStringBinding("tab.wishlist.delete"))
+                .withOnAction(event -> {
+                    final Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+                    alert.setTitle(LocaleService.getLocalizedStringForCurrentLocale("tab.wishlist.delete.confirm.title"));
+                    alert.setHeaderText(LocaleService.getLocalizedStringForCurrentLocale("tab.wishlist.delete.confirm.header"));
+                    alert.setContentText(LocaleService.getLocalizedStringForCurrentLocale("tab.wishlist.delete.confirm.content"));
+
+                    final Optional<ButtonType> result = alert.showAndWait();
+                    if (result.get() == ButtonType.OK) {
+                        APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                            APPLICATION_STATE.deleteWishlist(this.activeWishlistUUID, commander.getFid());
+                            Platform.runLater(this::refreshWishlistSelect);
+
+                        });
+                    }
+                })
+                .build();
+        this.renameWishlistButton = ButtonBuilder.builder()
+                .withStyleClass("wishlist-button")
+                .withText(LocaleService.getStringBinding("tab.wishlist.rename"))
+                .withOnAction(event -> {
+                    APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                        final Wishlists wishlists = APPLICATION_STATE.getWishlists(commander.getFid());
+                        wishlists.renameWishlist(this.activeWishlistUUID, this.wishlistName.getText());
+                        APPLICATION_STATE.saveWishlists(commander.getFid(), wishlists);
+                        this.wishlistName.clear();
+                        refreshWishlistSelect();
+                    });
+                })
+                .build();
+        this.createWishlistButton = ButtonBuilder.builder()
+                .withStyleClass("wishlist-button")
+                .withText(LocaleService.getStringBinding("tab.wishlist.create"))
+                .withOnAction(event -> {
+                    APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                        final Wishlists wishlists = APPLICATION_STATE.getWishlists(commander.getFid());
+                        wishlists.createWishlist(this.wishlistName.getText());
+                        APPLICATION_STATE.saveWishlists(commander.getFid(), wishlists);
+                        this.wishlistName.clear();
+                        refreshWishlistSelect();
+                    });
+                })
+                .build();
+        this.wishlistName = TextFieldBuilder.builder().withStyleClasses("root", "wishlist-newname").withPromptTextProperty(LocaleService.getStringBinding("tab.wishlist.rename.prompt")).build();
+        this.exportButton = ButtonBuilder.builder().withStyleClass("wishlist-button").withText(LocaleService.getStringBinding("tab.wishlist.export"))
                 .withOnAction(event -> EventService.publish(new SaveWishlistEvent(TextExporter.createTextWishlist(this.wishlistNeededMaterials)))).build();
-        final Button toStringButton = ButtonBuilder.builder().withStyleClass("wishlist-button").withText(LocaleService.getStringBinding("tab.wishlist.copy"))
+        this.clipboardButton = ButtonBuilder.builder().withStyleClass("wishlist-button").withText(LocaleService.getStringBinding("tab.wishlist.copy"))
                 .withOnAction(event -> copyWishListToClipboard()).build();
+
+        final double minButtonWidth = 110.0;
+        this.removeWishlistButton.setMinWidth(minButtonWidth);
+        this.renameWishlistButton.setMinWidth(minButtonWidth);
+        this.createWishlistButton.setMinWidth(minButtonWidth);
+        this.exportButton.setMinWidth(minButtonWidth);
+        this.clipboardButton.setMinWidth(minButtonWidth);
         this.hideCompletedCheckBox = new CheckBox();
         this.hideCompletedCheckBox.getStyleClass().add("wishlist-checkbox");
         this.hideCompletedCheckBox.textProperty().bind(LocaleService.getStringBinding("tab.wishlist.hide.completed"));
@@ -134,7 +222,7 @@ public class WishlistTab extends EDOTab {
             PreferencesService.setPreference("blueprint.hide.completed", newValue);
             refreshContent();
         });
-        this.wishlistSize = APPLICATION_STATE.getPreferredCommander().map(commander -> APPLICATION_STATE.getWishlist(commander.getFid()).size()).orElse(0);
+        this.wishlistSize = APPLICATION_STATE.getPreferredCommander().map(commander -> APPLICATION_STATE.getWishlists(commander.getFid()).getSelectedWishlist().getItems().size()).orElse(0);
         this.textProperty().bind(LocaleService.getSupplierStringBinding("tabs.wishlist", () -> (this.wishlistSize > 0) ? " (" + this.wishlistSize + ")" : ""));
 
         this.engineerBlueprintsLine = BoxBuilder.builder().withNodes(this.engineerRecipesLabel, this.engineerRecipes).buildHBox();
@@ -151,38 +239,50 @@ public class WishlistTab extends EDOTab {
 
         final Region region = new Region();
         HBox.setHgrow(region, Priority.ALWAYS);
+        region.setMinWidth(5);
         final Region region2 = new Region();
         HBox.setHgrow(region2, Priority.ALWAYS);
 
         final Region region3 = new Region();
         region3.setMinWidth(5);
-        final HBox hBoxBlueprints = BoxBuilder.builder().withNodes(this.selectedBlueprintsLabel, region, toStringButton, region3, exportButton).buildHBox();
+        final Region region4 = new Region();
+        region4.setMinWidth(5);
+        final Region region5 = new Region();
+        region5.setMinWidth(5);
+        final Region region6 = new Region();
+        region6.setMinWidth(5);
+        final Region region7 = new Region();
+        region7.setMinWidth(5);
+        final HBox hBoxBlueprints = BoxBuilder.builder().withNodes(this.wishlistSelect, region, this.wishlistName, region3, this.renameWishlistButton, region4, this.createWishlistButton, region5, this.removeWishlistButton, region6, this.clipboardButton, region7, this.exportButton).buildHBox();
         final HBox hBoxMaterials = BoxBuilder.builder().withNodes(this.requiredMaterialsLabel, region2, this.hideCompletedCheckBox).buildHBox();
         this.flows = BoxBuilder.builder().withStyleClass("wishlist-content").withNodes(this.goodFlow, this.assetChemicalFlow, this.assetCircuitFlow, this.assetTechFlow, this.dataFlow).buildVBox();
-        this.content = BoxBuilder.builder().withStyleClass("wishlist-content").withNodes(hBoxBlueprints, this.blueprints, hBoxMaterials, this.flows, this.travelPathLabel, this.tableView).buildVBox();
-        this.scrollPane.setContent(this.wishlistSize > 0 ? this.content : this.noBlueprint);
+        this.contentChild = BoxBuilder.builder().withStyleClass("wishlist-content").withNodes(this.selectedBlueprintsLabel, this.blueprints, hBoxMaterials, this.flows, this.travelPathLabel, this.shortestRoute).buildVBox();
+        this.content = BoxBuilder.builder().withStyleClass("wishlist-content").withNodes(hBoxBlueprints, this.wishlistSize > 0 ? this.contentChild : this.noBlueprint).buildVBox();
+        this.scrollPane.setContent(this.content);
         this.setContent(this.scrollPane);
         Observable.create((ObservableEmitter<JournalProcessedEvent> emitter) -> EventService.addListener(JournalProcessedEvent.class, emitter::onNext))
                 .debounce(500, TimeUnit.MILLISECONDS)
                 .observeOn(Schedulers.io())
                 .subscribe(newValue -> Platform.runLater(this::refreshContent));
 
-        this.wishlistBlueprints = APPLICATION_STATE.getPreferredCommander()
-                .map(commander -> APPLICATION_STATE.getWishlist(commander.getFid()).stream()
-                        .map(WishlistBlueprint::new)
-                        .collect(Collectors.toList())
+        this.wishlistBlueprints.clear();
+        this.wishlistBlueprints.addAll(APPLICATION_STATE.getPreferredCommander()
+                .map(commander -> APPLICATION_STATE.getWishlists(commander.getFid()).getSelectedWishlist().getItems().stream()
+                        .map(wishlistRecipe -> new WishlistBlueprint(APPLICATION_STATE.getWishlists(commander.getFid()).getSelectedWishlist().getUuid(), wishlistRecipe))
+                        .toList()
                 )
-                .orElse(new ArrayList<>());
+                .orElse(new ArrayList<>()));
         final Set<ModuleRecipe> collect = (Set<ModuleRecipe>) (Set<?>) this.wishlistBlueprints.stream().filter(wishlistBlueprint -> wishlistBlueprint.getRecipe() instanceof ModuleRecipe).map(wishlistBlueprint -> wishlistBlueprint.getRecipe()).collect(Collectors.toSet());
         try {
             final List<PathItem> pathItems = PathService.calculateShortestPath(this.wishlistBlueprints);
-            this.tableView.getItems().addAll(pathItems);
+            this.shortestRoute.getItems().addAll(pathItems);
             log.info("PATHS");
             pathItems.forEach(item -> log.info("item {}", item.toString()));
         } catch (final IllegalArgumentException ex) {
             log.error("Failed to generate path", ex);
         }
-
+        final Integer fontSize = FontSize.valueOf(PreferencesService.getPreference(PreferenceConstants.TEXTSIZE, "NORMAL")).getSize();
+        applyFontSizingHack(fontSize);
 
         refreshWishlistRecipes();
         refreshBlueprintOverview();
@@ -190,7 +290,7 @@ public class WishlistTab extends EDOTab {
     }
 
     private void initShortestPathTable() {
-        this.tableView = new TableView<>();
+        this.shortestRoute = new TableView<>();
         final TableColumn<PathItem, String> columnIndex = new TableColumn<>("#");
         columnIndex.setCellFactory(col -> {
             final TableCell<PathItem, String> cell = new TableCell<>();
@@ -209,7 +309,8 @@ public class WishlistTab extends EDOTab {
         columnIndex.setPrefWidth(50);
         columnIndex.setMinWidth(50);
 
-        final TableColumn<PathItem, String> columnEngineer = new TableColumn<>("Engineer");
+        final TableColumn<PathItem, String> columnEngineer = new TableColumn<>();
+        columnEngineer.textProperty().bind(LocaleService.getStringBinding("tab.wishlist.travel.path.column.engineer"));
         columnEngineer.setCellValueFactory(param -> LocaleService.getStringBinding(param.getValue().getEngineer().getLocalizationKey()));
         columnEngineer.setMaxWidth(175);
         columnEngineer.setPrefWidth(175);
@@ -218,8 +319,13 @@ public class WishlistTab extends EDOTab {
         columnEngineer.getStyleClass().add("wishlist-travel-path-engineer");
 
         final TableColumn<PathItem, Void> columnButtons = createButtonsColumn();
+        columnButtons.setMaxWidth(300);
+        columnButtons.setPrefWidth(300);
+        columnButtons.setMinWidth(300);
+        columnButtons.setSortable(false);
 
-        final TableColumn<PathItem, String> columnDistance = new TableColumn<>("Distance");
+        final TableColumn<PathItem, String> columnDistance = new TableColumn<>();
+        columnDistance.textProperty().bind(LocaleService.getStringBinding("tab.wishlist.travel.path.column.distance"));
         columnDistance.setCellValueFactory(param -> new SimpleStringProperty(NUMBER_FORMAT.format(param.getValue().getDistance()) + "Ly"));
         columnDistance.setSortable(false);
         columnDistance.getStyleClass().add("wishlist-travel-path-distance");
@@ -227,82 +333,69 @@ public class WishlistTab extends EDOTab {
         columnDistance.setPrefWidth(120);
         columnDistance.setMinWidth(120);
 
-        final TableColumn<PathItem, String> columnBlueprint = new TableColumn<>("Blueprint");
+        final TableColumn<PathItem, String> columnBlueprint = new TableColumn<>();
+        columnBlueprint.textProperty().bind(LocaleService.getStringBinding("tab.wishlist.travel.path.column.blueprints"));
         columnBlueprint.setCellValueFactory(param -> LocaleService.getStringBinding(() -> param.getValue().getRecipesString()));
         columnBlueprint.setSortable(false);
         final DoubleBinding usedWidth = columnEngineer.widthProperty().add(columnDistance.widthProperty()).add(columnIndex.widthProperty()).add(columnButtons.widthProperty()).add(10);
-        columnBlueprint.prefWidthProperty().bind(this.tableView.widthProperty().subtract(usedWidth));
+        columnBlueprint.prefWidthProperty().bind(this.shortestRoute.widthProperty().subtract(usedWidth));
         columnIndex.getStyleClass().add("wishlist-travel-path-blueprint");
 
-
-//        this.tableView.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
-        this.tableView.getStyleClass().add("wishlist-travel-path-table");
-        this.tableView.prefHeightProperty().bind(this.tableView.fixedCellSizeProperty().multiply(Bindings.size(this.tableView.getItems()).add(1.05)));
-        this.tableView.minHeightProperty().bind(this.tableView.prefHeightProperty());
-        this.tableView.maxHeightProperty().bind(this.tableView.prefHeightProperty());
-        this.tableView.getColumns().add(columnIndex);
-        this.tableView.getColumns().add(columnEngineer);
-        this.tableView.getColumns().add(columnBlueprint);
-        this.tableView.getColumns().add(columnDistance);
-        this.tableView.getColumns().add(columnButtons);
-        this.tableView.visibleProperty().bind(Bindings.greaterThan(Bindings.size(this.tableView.getItems()), 0));
-        this.travelPathLabel.visibleProperty().bind(Bindings.greaterThan(Bindings.size(this.tableView.getItems()), 0));
+        this.shortestRoute.getStyleClass().add("wishlist-travel-path-table");
+        this.shortestRoute.prefHeightProperty().bind(this.shortestRoute.fixedCellSizeProperty().multiply(Bindings.size(this.shortestRoute.getItems()).add(1.05)));
+        this.shortestRoute.minHeightProperty().bind(this.shortestRoute.prefHeightProperty());
+        this.shortestRoute.maxHeightProperty().bind(this.shortestRoute.prefHeightProperty());
+        this.shortestRoute.getColumns().add(columnIndex);
+        this.shortestRoute.getColumns().add(columnEngineer);
+        this.shortestRoute.getColumns().add(columnBlueprint);
+        this.shortestRoute.getColumns().add(columnDistance);
+        this.shortestRoute.getColumns().add(columnButtons);
+        this.shortestRoute.visibleProperty().bind(Bindings.greaterThan(Bindings.size(this.shortestRoute.getItems()), 0));
+        this.travelPathLabel.visibleProperty().bind(Bindings.greaterThan(Bindings.size(this.shortestRoute.getItems()), 0));
     }
 
     private TableColumn<PathItem, Void> createButtonsColumn() {
-        final TableColumn<PathItem, Void> colBtn = new TableColumn<>("Remove");
+        final TableColumn<PathItem, Void> colBtn = new TableColumn<>();
+        colBtn.textProperty().bind(LocaleService.getStringBinding("tab.wishlist.travel.path.column.actions"));
+        final Callback<TableColumn<PathItem, Void>, TableCell<PathItem, Void>> cellFactory = param -> new TableCell<>() {
 
-        final Callback<TableColumn<PathItem, Void>, TableCell<PathItem, Void>> cellFactory = new Callback<>() {
+            private final Button removeButton = ButtonBuilder.builder().withText(LocaleService.getStringBinding("tab.wishlist.travel.path.column.actions.remove")).build();
+            private final Button hideButton = ButtonBuilder.builder().withText(LocaleService.getStringBinding("tab.wishlist.travel.path.column.actions.hide")).build();
+
+            {
+                this.removeButton.setOnAction((ActionEvent event) -> {
+                    final List<WishlistBlueprint> pathBlueprints = getPathWishlistBlueprints();
+                    pathBlueprints.forEach(WishlistBlueprint::remove);
+                });
+                this.hideButton.setOnAction((ActionEvent event) -> {
+                    final List<WishlistBlueprint> pathBlueprints = getPathWishlistBlueprints();
+                    pathBlueprints.forEach(wishlistBlueprint -> wishlistBlueprint.setVisibility(false));
+                    refreshContent();
+                });
+            }
+
+            private List<WishlistBlueprint> getPathWishlistBlueprints() {
+                final PathItem pathItem = getTableView().getItems().get(getIndex());
+                return pathItem.getRecipes().entrySet().stream()
+                        .flatMap(recipeEntry -> WishlistTab.this.wishlistBlueprints.stream()
+                                .filter(WishlistBlueprint::isVisibleBlueprint)
+                                .filter(wishlistBlueprint -> wishlistBlueprint.getRecipe().equals(recipeEntry.getKey()))
+                                .limit(recipeEntry.getValue())
+                        ).toList();
+            }
+
             @Override
-            public TableCell<PathItem, Void> call(final TableColumn<PathItem, Void> param) {
-                return new TableCell<>() {
-
-                    private final Button btn = new Button("Remove blueprints");
-                    private final Button btn2 = new Button("Hide blueprints");
-
-                    {
-                        this.btn.setOnAction((ActionEvent event) -> {
-                            final PathItem pathItem = getTableView().getItems().get(getIndex());
-                            log.info("to remove: " + pathItem.getRecipesString());
-                            final List<WishlistBlueprint> blueprints = pathItem.getRecipes().entrySet().stream()
-                                    .flatMap(recipeEntry -> WishlistTab.this.wishlistBlueprints.stream()
-                                            .filter(WishlistBlueprint::isVisibleBlueprint)
-                                            .filter(wishlistBlueprint -> wishlistBlueprint.getRecipe().equals(recipeEntry.getKey()))
-                                            .limit(recipeEntry.getValue())
-                                    ).toList();
-                            blueprints.forEach(WishlistBlueprint::remove);
-                        });
-                        this.btn2.setOnAction((ActionEvent event) -> {
-                            final PathItem pathItem = getTableView().getItems().get(getIndex());
-                            log.info("to hide: " + pathItem.getRecipesString());
-                            final List<WishlistBlueprint> blueprints = pathItem.getRecipes().entrySet().stream()
-                                    .flatMap(recipeEntry -> WishlistTab.this.wishlistBlueprints.stream()
-                                            .filter(WishlistBlueprint::isVisibleBlueprint)
-                                            .filter(wishlistBlueprint -> wishlistBlueprint.getRecipe().equals(recipeEntry.getKey()))
-                                            .limit(recipeEntry.getValue())
-                                    ).toList();
-                            blueprints.forEach(wishlistBlueprint -> wishlistBlueprint.setVisibility(false));
-                            refreshContent();
-                        });
-                    }
-
-                    @Override
-                    public void updateItem(final Void item, final boolean empty) {
-                        super.updateItem(item, empty);
-                        if (empty) {
-                            setGraphic(null);
-                        } else {
-                            setGraphic(new HBox(this.btn, this.btn2));
-                        }
-                    }
-                };
+            public void updateItem(final Void item, final boolean empty) {
+                super.updateItem(item, empty);
+                if (empty) {
+                    setGraphic(null);
+                } else {
+                    setGraphic(new HBox(this.removeButton, this.hideButton));
+                }
             }
         };
-
         colBtn.setCellFactory(cellFactory);
-
         return colBtn;
-
     }
 
     private void initLabels() {
@@ -318,8 +411,22 @@ public class WishlistTab extends EDOTab {
     }
 
     private void initEventHandling() {
+        EventService.addListener(AfterFontSizeSetEvent.class, fontSizeEvent -> {
+            applyFontSizingHack(fontSizeEvent.getFontSize());
+        });
+        EventService.addListener(WishlistSelectedEvent.class, wishlistChangedEvent -> {
+            refreshWishlistBlueprints();
+            refreshWishlistRecipes();
+            refreshBlueprintOverview();
+            refreshContent();
+            EventService.publish(new WishlistChangedEvent(this.activeWishlistUUID));
+        });
         EventService.addListener(WishlistChangedEvent.class, wishlistChangedEvent -> {
-            this.wishlistSize = wishlistChangedEvent.getWishlistSize();
+            this.activeWishlistUUID = wishlistChangedEvent.getWishlistUUID();
+            APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                this.wishlistSize = APPLICATION_STATE.getWishlists(commander.getFid()).getWishlist(this.activeWishlistUUID).getItems().size();
+            });
+
             this.textProperty().bind(LocaleService.getSupplierStringBinding("tabs.wishlist", () -> (this.wishlistSize > 0) ? " (" + this.wishlistSize + ")" : ""));
         });
         EventService.addListener(WishlistRecipeEvent.class, wishlistEvent ->
@@ -334,35 +441,75 @@ public class WishlistTab extends EDOTab {
                         });
             }
             if (Action.ADDED.equals(wishlistEvent.getAction())) {
-                final WishlistBlueprint wishlistBlueprint = new WishlistBlueprint(wishlistEvent.getWishlistRecipe());
-                this.wishlistBlueprints.add(wishlistBlueprint);
-                addBluePrint(wishlistBlueprint);
+                APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+                    final WishlistBlueprint wishlistBlueprint = new WishlistBlueprint(wishlistEvent.getWishlistUUID(), wishlistEvent.getWishlistRecipe());
+                    if (!wishlistEvent.getWishlistUUID().equals(this.activeWishlistUUID)) {
+                        Platform.runLater(() -> {
+                            this.wishlistSelect.getSelectionModel().select(this.wishlistSelect.getItems().stream().filter(wishlist -> wishlist.getUuid().equals(wishlistEvent.getWishlistUUID())).findFirst().orElse(null));
+                        });
+                    } else {
+                        this.wishlistBlueprints.add(wishlistBlueprint);
+                        addBluePrint(wishlistBlueprint);
+                    }
+                });
             }
             refreshContent();
         });
         EventService.addListener(CommanderSelectedEvent.class, commanderSelectedEvent ->
         {
             final String fid = commanderSelectedEvent.getCommander().getFid();
-            this.wishlistBlueprints = APPLICATION_STATE.getWishlist(fid).stream()
-                    .map(WishlistBlueprint::new)
-                    .collect(Collectors.toList());
+            final Wishlist selectedWishlist = APPLICATION_STATE.getWishlists(fid).getSelectedWishlist();
+            this.activeWishlistUUID = selectedWishlist.getUuid();
+            this.wishlistBlueprints.clear();
+            this.wishlistBlueprints.addAll(selectedWishlist.getItems().stream()
+                    .map(wishlistRecipe -> new WishlistBlueprint(this.activeWishlistUUID, wishlistRecipe))
+                    .toList());
+            refreshWishlistSelect();
             refreshWishlistRecipes();
             refreshBlueprintOverview();
             refreshContent();
-            EventService.publish(new WishlistChangedEvent(this.wishlistBlueprints.size()));
+            EventService.publish(new WishlistChangedEvent(this.activeWishlistUUID));
         });
         EventService.addListener(CommanderAllListedEvent.class, commanderAllListedEvent ->
         {
-            this.wishlistBlueprints = APPLICATION_STATE.getPreferredCommander().map(commander -> APPLICATION_STATE.getWishlist(commander.getFid()).stream()
-                    .map(WishlistBlueprint::new)
-                    .collect(Collectors.toList())).orElse(new ArrayList<>());
-            refreshWishlistRecipes();
-            refreshBlueprintOverview();
-            refreshContent();
-            EventService.publish(new WishlistChangedEvent(this.wishlistBlueprints.size()));
+            refreshWishlistBlueprints();
         });
         EventService.addListener(LocationEvent.class, locationEvent -> {
             refreshContent();
+        });
+        EventService.addListener(ImportResultEvent.class, importResultEvent -> {
+            if (importResultEvent.getResult().equals(ImportResult.SUCCESS)) {
+                refreshWishlistBlueprints();
+            }
+        });
+    }
+
+    private void refreshWishlistBlueprints() {
+        this.wishlistBlueprints.clear();
+        final List<WishlistBlueprint> newWishlistBlueprints = APPLICATION_STATE.getPreferredCommander()
+                .map(commander -> {
+                    final Wishlist selectedWishlist = APPLICATION_STATE.getWishlists(commander.getFid()).getSelectedWishlist();
+                    this.activeWishlistUUID = selectedWishlist.getUuid();
+                    return selectedWishlist.getItems().stream()
+                            .map(wishlistRecipe -> new WishlistBlueprint(this.activeWishlistUUID, wishlistRecipe))
+                            .toList();
+                })
+                .orElse(Collections.emptyList());
+        this.wishlistBlueprints.addAll(newWishlistBlueprints);
+        refreshWishlistSelect();
+        refreshWishlistRecipes();
+        refreshBlueprintOverview();
+        refreshContent();
+        EventService.publish(new WishlistChangedEvent(this.activeWishlistUUID));
+    }
+
+    private void refreshWishlistSelect() {
+        APPLICATION_STATE.getPreferredCommander().ifPresent(commander -> {
+            final Wishlists wishlists = APPLICATION_STATE.getWishlists(commander.getFid());
+            final Set<Wishlist> items = wishlists.getAllWishlists();
+            this.wishlistSelect.getItems().clear();
+            this.wishlistSelect.getItems().addAll(items);
+            this.wishlistSelect.getSelectionModel().select(wishlists.getSelectedWishlist());
         });
     }
 
@@ -372,11 +519,11 @@ public class WishlistTab extends EDOTab {
         this.suitModuleRecipes.getChildren().clear();
         this.weaponUpgradeRecipes.getChildren().clear();
         this.weaponModuleRecipes.getChildren().clear();
-        this.engineerRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.ENGINEER_UNLOCKS.equals(wishlistBlueprint.getRecipeCategory())).collect(Collectors.toList()));
-        this.suitUpgradeRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.SUIT_GRADES.equals(wishlistBlueprint.getRecipeCategory())).collect(Collectors.toList()));
-        this.suitModuleRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.SUIT_MODULES.equals(wishlistBlueprint.getRecipeCategory())).collect(Collectors.toList()));
-        this.weaponUpgradeRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.WEAPON_GRADES.equals(wishlistBlueprint.getRecipeCategory())).collect(Collectors.toList()));
-        this.weaponModuleRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.WEAPON_MODULES.equals(wishlistBlueprint.getRecipeCategory())).collect(Collectors.toList()));
+        this.engineerRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.ENGINEER_UNLOCKS.equals(wishlistBlueprint.getRecipeCategory())).toList());
+        this.suitUpgradeRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.SUIT_GRADES.equals(wishlistBlueprint.getRecipeCategory())).toList());
+        this.suitModuleRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.SUIT_MODULES.equals(wishlistBlueprint.getRecipeCategory())).toList());
+        this.weaponUpgradeRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.WEAPON_GRADES.equals(wishlistBlueprint.getRecipeCategory())).toList());
+        this.weaponModuleRecipes.getChildren().addAll(this.wishlistBlueprints.stream().filter(wishlistBlueprint -> RecipeCategory.WEAPON_MODULES.equals(wishlistBlueprint.getRecipeCategory())).toList());
     }
 
 
@@ -419,13 +566,24 @@ public class WishlistTab extends EDOTab {
     }
 
     private void refreshContent() {
-        this.scrollPane.setContent(!this.wishlistBlueprints.isEmpty() ? this.content : this.noBlueprint);
+        if (this.wishlistBlueprints.isEmpty()) {
+            this.content.getChildren().remove(this.contentChild);
+            if (!this.content.getChildren().contains(this.noBlueprint)) {
+                this.content.getChildren().add(this.noBlueprint);
+            }
+        } else {
+            this.content.getChildren().remove(this.noBlueprint);
+            if (!this.content.getChildren().contains(this.contentChild)) {
+                this.content.getChildren().add(this.contentChild);
+            }
+        }
         this.goodFlow.getChildren().clear();
         this.assetChemicalFlow.getChildren().clear();
         this.dataFlow.getChildren().clear();
         this.assetCircuitFlow.getChildren().clear();
         this.assetTechFlow.getChildren().clear();
         this.wishlistNeededMaterials.clear();
+        this.shortestRoute.getItems().clear();
         this.wishlistBlueprints.stream()
                 .filter(WishlistBlueprint::isVisibleBlueprint)
                 .map(WishlistBlueprint::getRecipe)
@@ -447,20 +605,19 @@ public class WishlistTab extends EDOTab {
                             case ASSET -> new WishlistIngredient(StorageType.forMaterial(wishlistItem.getKey()), wishlistItem.getKey(), wishlistItem.getValue(), APPLICATION_STATE.getAssets().get(wishlistItem.getKey()).getTotalValue());
                             case OTHER -> null;
                         }
-                ).collect(Collectors.toList());
+                ).toList();
 
         this.wishlistBlueprints.stream()
                 .forEach(wishlistBlueprint -> wishlistBlueprint.addWishlistIngredients(ingredients));
-        this.goodFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.GOOD)).sorted(Comparator.comparing(WishlistIngredient::getName)).collect(Collectors.toList()));
-        this.dataFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.DATA)).sorted(Comparator.comparing(WishlistIngredient::getName)).collect(Collectors.toList()));
-        this.assetCircuitFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.CIRCUIT)).sorted(Comparator.comparing(WishlistIngredient::getName)).collect(Collectors.toList()));
-        this.assetChemicalFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.CHEMICAL)).sorted(Comparator.comparing(WishlistIngredient::getName)).collect(Collectors.toList()));
-        this.assetTechFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.TECH)).sorted(Comparator.comparing(WishlistIngredient::getName)).collect(Collectors.toList()));
+        this.goodFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.GOOD)).sorted(Comparator.comparing(WishlistIngredient::getName)).toList());
+        this.dataFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.DATA)).sorted(Comparator.comparing(WishlistIngredient::getName)).toList());
+        this.assetCircuitFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.CIRCUIT)).sorted(Comparator.comparing(WishlistIngredient::getName)).toList());
+        this.assetChemicalFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.CHEMICAL)).sorted(Comparator.comparing(WishlistIngredient::getName)).toList());
+        this.assetTechFlow.getChildren().addAll(ingredients.stream().filter(ingredient -> ingredient.getType().equals(StorageType.ASSET) && ((Asset) ingredient.getMaterial()).getType().equals(AssetType.TECH)).sorted(Comparator.comparing(WishlistIngredient::getName)).toList());
         removeAndAddFlows();
-        this.tableView.getItems().clear();
         try {
             final List<PathItem> pathItems = PathService.calculateShortestPath(this.wishlistBlueprints);
-            this.tableView.getItems().addAll(pathItems);
+            this.shortestRoute.getItems().addAll(pathItems);
         } catch (final IllegalArgumentException ex) {
             log.error("Failed to generate path", ex);
         }
